; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_escape124.c_decode_skip_count.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_escape124.c_decode_skip_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @decode_skip_count to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @decode_skip_count(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @get_bits_left(i32* %5)
  %7 = icmp slt i32 %6, 1
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %39

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @get_bits1(i32* %10)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %16, label %14

14:                                               ; preds = %9
  %15 = load i32, i32* %4, align 4
  store i32 %15, i32* %2, align 4
  br label %39

16:                                               ; preds = %9
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @get_bits(i32* %17, i32 3)
  %19 = load i32, i32* %4, align 4
  %20 = add i32 %19, %18
  store i32 %20, i32* %4, align 4
  %21 = load i32, i32* %4, align 4
  %22 = icmp ne i32 %21, 8
  br i1 %22, label %23, label %25

23:                                               ; preds = %16
  %24 = load i32, i32* %4, align 4
  store i32 %24, i32* %2, align 4
  br label %39

25:                                               ; preds = %16
  %26 = load i32*, i32** %3, align 8
  %27 = call i32 @get_bits(i32* %26, i32 7)
  %28 = load i32, i32* %4, align 4
  %29 = add i32 %28, %27
  store i32 %29, i32* %4, align 4
  %30 = load i32, i32* %4, align 4
  %31 = icmp ne i32 %30, 135
  br i1 %31, label %32, label %34

32:                                               ; preds = %25
  %33 = load i32, i32* %4, align 4
  store i32 %33, i32* %2, align 4
  br label %39

34:                                               ; preds = %25
  %35 = load i32, i32* %4, align 4
  %36 = load i32*, i32** %3, align 8
  %37 = call i32 @get_bits(i32* %36, i32 12)
  %38 = add i32 %35, %37
  store i32 %38, i32* %2, align 4
  br label %39

39:                                               ; preds = %34, %32, %23, %14, %8
  %40 = load i32, i32* %2, align 4
  ret i32 %40
}

declare dso_local i32 @get_bits_left(i32*) #1

declare dso_local i32 @get_bits1(i32*) #1

declare dso_local i32 @get_bits(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
